<resources>
    <string name="app_name">Gezi Rehberim</string>

    <string name="priorityText">Öncelik</string>
    <string name="priorityChooseText">Öncelik Seç</string>
    <string name="visitText">Ziyaret Ekle</string>
    <string name="shortDescriptionText">Yer Kısa Tanım</string>
    <string name="buttonLocationShowText">Konum Göster</string>
    <string name="buttonLocationAddText">Konum Ekle</string>
    <string name="shortDescriptionTextHint">Yer kısa tanım bilgisi</string>
    <string name="descriptionText">Kısa Açıklama</string>
    <string name="descriptionTextHint">Kısa Açıklama en fazla 3 satır</string>
    <string name="visitHistoryText">Ziyaret Geçmişi</string>
    <string name="edittextInputHint">Girilen açıklama en fazla 3 satır</string>

    <string name="visitedText">Gezdiklerim</string>
    <string name="toVisitText">Gezilecekler</string>
    <string name="title_activity_maps">Harita</string>
    <string name="saveText">Kaydet</string>
    <string name="info_empty">Tüm alanların eksiksiz doldurulması gerekir</string>
    <string name="MAPS_API_KEY">AIzaSyB1I9ufV60yaUFcCHLsOYbtwWGT95VoEnE</string>
    <string name="splashtext">Gezi \nRehberim</string>
</resources>