<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <include
                android:id="@+id/slider"
                layout="@layout/slider_viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/priorityCardView"
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_18"
                android:layout_marginTop="@dimen/margin_13"
                app:cardCornerRadius="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priorityText"
                        android:textColor="@color/header_text_color"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SmallSp" />

                    <View
                        android:id="@+id/priorityDrawable"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addVisitButton"
                android:layout_width="94dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/margin_18"
                android:background="@drawable/bg_add_visit"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/visitText"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/priorityCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/priorityCardView" />

            <include
                android:id="@+id/shortDescriptionLayout"
                layout="@layout/short_description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_13"
                app:layout_constraintEnd_toEndOf="@+id/addVisitButton"
                app:layout_constraintStart_toStartOf="@+id/priorityCardView"
                app:layout_constraintTop_toBottomOf="@+id/priorityCardView" />

            <include
                android:id="@+id/descriptionLayout"
                layout="@layout/description_layout"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_marginTop="@dimen/margin_13"
                app:layout_constraintEnd_toEndOf="@+id/addVisitButton"
                app:layout_constraintStart_toStartOf="@+id/priorityCardView"
                app:layout_constraintTop_toBottomOf="@+id/shortDescriptionLayout" />

            <TextView
                android:id="@+id/visitHistoryHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_14"
                android:layout_marginTop="@dimen/margin_9"
                android:text="@string/visitHistoryText"
                android:textColor="@color/header_text_color"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/priorityCardView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLayout" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerVisitHistory"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/margin_13"
                android:layout_marginBottom="@dimen/margin_7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/descriptionLayout"
                app:layout_constraintStart_toStartOf="@+id/descriptionLayout"
                app:layout_constraintTop_toBottomOf="@+id/visitHistoryHeader" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <include
        android:id="@+id/topBar"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>